add openapi to number-generate-service
