# number-generate-service/src/main/java/com/order/controller/NumberController.java
@@ -1,7 +1,9 @@
 package com.order.controller;
 
-import com.order.models.OrderNumber;
+import com.order.openapi.api.ApiApi;
+import com.order.openapi.model.OrderNumberDto;
 import com.order.service.NumberGenerateService;
+import io.swagger.v3.oas.annotations.Operation;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.ResponseEntity;
@@ -9,7 +11,6 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.sql.Date;
 
 /**
  * Контроллер для работы с маппингом "/numbers".
@@ -19,20 +20,19 @@ import java.sql.Date;
 @Slf4j
 @RequiredArgsConstructor
 @RequestMapping("/api/v1/numbers")
-public class NumberController {
+public class NumberController implements ApiApi {
 
     private final NumberGenerateService numberGenerateService;
 
-    /**
-     * Генерация номера заказа.
-     *
-     *
-     * @return orderNumber
-     */
-    @GetMapping()
-    public ResponseEntity<OrderNumber> generateNumber() {
-        String number = numberGenerateService.generateUniqueNumber();
-        Date date = numberGenerateService.getCurrentDateTime();
-        return ResponseEntity.ok(new OrderNumber(number, date));
+    @Operation(
+        summary = "Генерация номера заказа",
+        description = "Генерирует уникальный номер заказа и возвращает его вместе с текущей датой."
+    )
+    @GetMapping
+    public ResponseEntity<OrderNumberDto> generateNumber() {
+        log.debug("GET-request, generateNumber - start");
+        OrderNumberDto orderNumberDto = numberGenerateService.getOrderData();
+        log.debug("GET-request, generateNumber - end, orderNumberDto = {}", orderNumberDto);
+        return ResponseEntity.ok(orderNumberDto);
     }
 }
